--- a/View.xib
+++ b/View.xib
@@ -31,6 +31,9 @@
                         <segment title="Food"/>
                     </segments>
                     <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <action selector="onTypesChange:" destination="-1" eventType="touchUpInside" id="Zmj-AE-viL"/>
+                    </connections>
                 </segmentedControl>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
